--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node-crc-itu": "^0.1.0",
     "socket.io": "^3.0.4"
   }
 }
