--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --ignore src/output/ index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon --ignore src/output/ index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,9 @@
     "express": "^4.17.1",
     "node-crc-itu": "^0.1.0",
     "socket.io": "^3.0.4"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.6"
   }
 }
